--- a/public/admin/admin.css
+++ b/public/admin/admin.css
@@ -121,7 +121,7 @@ span.badge {
     padding: 16px 13px 16px 22px!important;
     box-shadow: 0 24px 38px 3px rgb(0 0 0 / 14%), 0 9px 46px 8px rgb(0 0 0 / 12%), 0 11px 15px -7px rgb(0 0 0 / 20%);
 }
-.tata .tata-icon {
+.tata .tata-icon{
     font-size: 1.2em!important;
     color: inherit;
     color: #fff!important;
@@ -145,7 +145,9 @@ span.badge {
     content: "";
     border-radius: 4px 0 0 4px;
 }
-
+.ss-snackbars.ss-snackbars-active {
+    z-index: 99999;
+}
 .tata-title{
     font-weight: bold;
 }
@@ -176,4 +178,78 @@ span.badge {
 }
 .tata.text .tata-body >*{
     color: #323232!important;
+}
+
+
+
+.ss-snackbar-icon .ss-icon {
+    font-size: 1.2em!important;
+    color: inherit;
+    color: #fff!important;
+    border-radius: 50%;
+    height: 35px;
+    width: 35px;
+    flex: 0 0 35px;
+    line-height: 33px;
+    text-align: center;
+    margin-left: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.ss-snackbar {
+    display: flex;
+    align-items: center;
+    border-radius: 5px;
+}
+
+
+.ss-snackbar-success .ss-snackbar-icon  .ss-icon {
+    background: #20c997!important;
+}
+
+.ss-snackbar-danger .ss-snackbar-icon  .ss-icon {
+    background: #e9546b!important;
+}
+.ss-snackbar-warning .ss-snackbar-icon  .ss-icon {
+    background: #2ca9e1!important;
+}
+.ss-snackbar-text .ss-snackbar-icon  .ss-icon {
+    background: #323232!important;
+}
+
+button.ss-close {
+    position: absolute;
+    top: 6px;
+    right: 5px;
+    color: red;
+}
+button.ss-close > * {
+    color: red!important;
+}
+.ss-snackbar {
+    border-width: 5px;
+}
+
+.ss-snackbar-success .ss-snackbar-body >*{
+    color: #20c997!important;
+}
+
+.ss-snackbar-danger .ss-snackbar-body >*{
+    color: #e9546b!important;
+}
+.ss-snackbar-info .ss-snackbar-body >*{
+    color: #2ca9e1!important;
+}
+.ss-snackbar-default .ss-snackbar-body >*{
+    color: #323232!important;
+}
+.ss-snackbar-body h4{
+    font-size: 18px;
+}
+.ss-snackbar-body p{
+    font-size: 16px;
+}
+.ss-snackbar {
+    padding: 1rem 1rem;
 }
