--- a/public/admin/admin.css
+++ b/public/admin/admin.css
@@ -253,3 +253,83 @@ button.ss-close > * {
 .ss-snackbar {
     padding: 1rem 1rem;
 }
+
+/* end toast */
+
+a.addBtn {
+    position: relative;
+    padding-left: 43px;
+}
+a.addBtn i {
+    position: absolute;
+    margin-top: 3px;
+    background-color: rgba(0,0,0,.15);
+    top: -3px;
+    left: 0;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    padding: 0 11px;
+    border-right: 1px solid rgba(0,0,0,.15);
+}
+p.errorMsg {
+    text-align: center;
+    padding: 20px 0;
+    color: tomato;
+}
+.pointer{
+    cursor: pointer;
+}
+ul{
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+ul.featureList {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding-left: 22px;
+}
+
+ul.featureList li {
+    display: block;
+    padding: 7px;
+}
+.adminForm .form-control {
+    height: 40px;
+    border-radius: 5px;
+}
+.niceSelect {
+    margin-bottom: 15px;
+}
+.btn-loading.submitBtn{
+    padding-right: 35px;
+    transition: all .5s ease-in-out;
+}
+.btn-loading{
+    position: relative;
+    transition: all .5s ease-in-out;
+}
+.btn-loading:before {
+    content: "";
+    display: inline-block;
+    width: 20px;
+    height: 20px;
+    border: 3px solid rgba(255,255,255,.3);
+    border-radius: 50%;
+    border-top-color: #fff;
+    animation: spin 1s infinite linear;
+    -webkit-animation: spin 1s  infinite linear;
+    position: absolute;
+    right: 4px;
+    margin-top: 3px;
+}
+
+@keyframes spin {
+  to { -webkit-transform: rotate(360deg); }
+}
+@-webkit-keyframes spin {
+  to { -webkit-transform: rotate(360deg); }
+}
